--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,16 @@
 <% title(@project.name, "Projects") %>
+<header>
+  <h1><%= @project.name %></h1>
+</header>
 
-<h1><%= @project.name %></h1>
+  <ul class="actions">
+    <li><%= link_to " Edit Project", 
+         edit_project_path(@project), 
+         class: "edit" %> </li>
+    <li><%= link_to " Delete Project", 
+        project_path(@project), method: :delete, 
+        data: { confirm: "Are you sure you want to delete the project?"}, 
+        class: "delete" %></li>
+  </ul>
+
 <p><%= @project.description %></p>
-<%= link_to "Edit Project", edit_project_path(@project) %> 
-<%= link_to "Delete Project", project_path(@project), method: :delete,
-    data: { confirm: "Are you sure you want to delete the project?"} %> 
