Implement tickets display

--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -7,6 +7,6 @@
     <h2><%= @ticket.name %></h2>
   </header>
   
-  <%= simple_format(@ticket_description) %>
+  <%= simple_format(@ticket.description) %>
   
 </div>
