--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,10 +7,12 @@
     <li><%= link_to " Edit Project", 
          edit_project_path(@project), 
          class: "edit" %> </li>
-    <li><%= link_to " Delete Project", 
-        admin_project_path(@project), method: :delete, 
-        data: { confirm: "Are you sure you want to delete the project?"}, 
-        class: "delete" %></li>
+    <% admins_only do %>
+      <li><%= link_to " Delete Project", 
+          admin_project_path(@project), method: :delete, 
+          data: { confirm: "Are you sure you want to delete the project?"}, 
+          class: "delete" %></li>
+    <% end %>
   </ul>
 
 <p><%= @project.description %></p>
